--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
   <!-- viewport device width initial scale 1 for mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  
+
   <title>Sample HTML email</title>
+
+  <!-- border spacing, padding, border set to 0 so email clients do not add additional spacing, media query breaking point at 600 px -->
   <style type="text/css">
 body{
   margin: 0;
@@ -30,7 +32,24 @@ img{
   border: 0px;
 }
 
-@media  and (max-width: 600px) {
+.wrapper{
+  width: 100%;
+  table-layout: fixed;
+  background-color: #cccccc;
+  padding-bottom: 30px;
+}
+
+.main{
+  margin: 0 auto;
+  width: 100%;
+  max-width: 600px;
+  background-color: #ffffff;
+  border-spacing: 0;
+  font-family: sans-serif;
+  columns: #4a4a4a;
+}
+
+@media screen and (max-width: 600px) {
   
 }
   
@@ -38,5 +57,129 @@ img{
 </head>
 <body>
   
+  <center class="wrapper">
+    
+    <table class="main" align="center">
+    <!-- SOCAIL MEDIA ICONS -->
+<tr>
+  <td>
+    <table width="100%">
+
+      <tr>
+        <td style="text-align: center;padding: 8px 0 4px;background-color: #eaf6fb;border-top: 2px solid #21c6b8;border-bottom: 2px solid #21c6b8">
+
+          <a href="#"><img src="./img/circle-facebook.png" width="32"  alt=""></a>
+          <a href="#"><img src="./img/circle-twitter.png" width="32"  alt=""></a>
+          <a href="#"><img src="./img/circle-youtube.png" width="32"  alt=""></a>
+          <a href="#"><img src="./img/circle-facebook.png" width="32"  alt=""></a>
+          <a href="#"><img src="./img/circle-linkedin.png" width="32"  alt=""></a>
+          <a href="#"><img src="./img/circle-instagram.png" width="32"  alt=""></a>
+        </td>
+      </tr>
+      
+    </table>
+  </td>
+</tr>
+
+
+    <!-- LOGO -->
+<tr>
+  <td>
+    <table width="100%">
+
+      <tr>
+        <td style="text-align: center;padding: 15px;">
+
+          <a href="#"><img src="./img/html-email.png" alt="logo" width="300px" title="logo"></a>
+
+        </td>
+      </tr>
+
+    </table>
+  </td>
+</tr>
+
+
+
+    <!-- BANNER IMAGE -->
+
+<tr>
+  <td><a href="#"><img src="./img/banner.jpg" alt="" style="max-width: 100%;" width="600px"></a>
+  </td>
+</tr>
+
+    <!-- TWO COLUMN SECTION -->
+
+    <tr>
+      <td>
+        <table width="100%">
+
+          <tr>
+            <td class="two-columns">
+
+              <table class="column">
+                <tr>
+                  <td class="padding">
+
+                    <table class="content">
+                      <tr>
+                        <td>
+                          <a href=""><img src="./img/man-teal.jpg" alt="" width="260px" style="max-width: 260px; border-radius: 8px;"></a>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td style="padding: 10px;">
+                        <p style="font-size: 17px; font-weight: bold;">Build Responsive Emails</p>
+                        <p style="padding-bottom: 15px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae tenetur animi mollitia voluptatum eius neque!
+                        </p>
+                        <a href="#" class="button">HTML Email</a>
+                        </td>
+                      </tr>
+                    </table>
+
+                  </td>
+                </tr>
+              </table>
+
+              <!-- second col -->
+              <table class="column">
+                <tr>
+                  <td class="padding">
+
+                    <table class="content">
+                      <tr>
+                        <td>
+                          <a href=""><img src="./img/woman-teal.jpg" alt="" width="260px" style="max-width: 260px; border-radius: 8px;"></a>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td style="padding: 10px;">
+                        <p style="font-size: 17px; font-weight: bold;">Create Custom Designs</p>
+                        <p style="padding-bottom: 15px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae tenetur animi mollitia voluptatum eius neque!
+                        </p>
+                        <a href="#" class="button">Get Started</a>
+                        </td>
+                      </tr>
+                    </table>
+
+                  </td>
+                </tr>
+              </table>
+
+            </td>
+          </tr>
+
+        </table>
+      </td>
+    </tr>
+
+    <!-- EMAIL LOGOS -->
+
+
+
+    <!-- FOOTER SECTION -->
+
+      </table>
+    </center>
 </body>
 </html>
